--- a/k8s/NetflixFrontend/service.yaml
+++ b/k8s/NetflixFrontend/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: netflix-frontend-service.yaml
+  name: netflix-frontend-service
 spec:
   selector:
     app: netflix-frontend
