--- a/k8s/NetflixFrontend/deployment.yaml
+++ b/k8s/NetflixFrontend/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: ${IMAGE_FULL_NAME_PARAM}
+        image: "${IMAGE_FULL_NAME_PARAM}"
         ports:
           - containerPort: 3000
         env:
